@@ -34,4 +34,29 @@
         <field name="name">Test Button Action</field>
         <field name="url">http://www.example.com/</field>
     </record>
+
+    <record model="ir.ui.view" id="test_modelview_view_attributes">
+        <field name="model">test.modelview.view_attributes</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <![CDATA[
+            <form>
+                <label name="foo"/>
+                <field name="foo"/>
+            </form>
+            ]]>
+        </field>
+    </record>
+    <record model="ir.ui.view" id="test_modelview_view_attributes_depends">
+        <field name="model">test.modelview.view_attributes_depends</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <![CDATA[
+            <form>
+                <label name="foo"/>
+                <field name="foo"/>
+            </form>
+            ]]>
+        </field>
+    </record>
 </tryton>
